MDEV-15933 Cannot resume Node SYNCED state when wsrep_desync is done after FTWRL

Manually setting wsrep_desync after FTWRL should not be allowed.